{
    "name": "InputActions",
    "maps": [
        {
            "name": "Experimentor",
            "id": "67659982-d3c7-43d3-9b06-d51205cbab74",
            "actions": [
                {
                    "name": "ControllerMove",
                    "type": "Value",
                    "id": "8afec6ae-edce-4431-af9a-b4b5efa48edc",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Trigger",
                    "type": "Button",
                    "id": "dd0b754c-d7e5-4bf2-8826-9fca3d32a651",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "9d9b7092-23cc-4b51-bbb5-88d0d38ea0f6",
                    "path": "<OculusTouchController>{RightHand}/devicePosition",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ControllerMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "47ac7944-882f-4fb6-9928-6b8bcdb885c9",
                    "path": "<XRInputV1::Oculus::OculusTouchControllerRight>{RightHand}/triggerpressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Trigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Participant",
            "id": "bda3fcd7-a536-4343-a3f5-a4506f807ac2",
            "actions": [
                {
                    "name": "Thumbstick",
                    "type": "PassThrough",
                    "id": "0b33acaa-9d1d-4666-a2e7-b2063c345c6d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "ThumbstickPress",
                    "type": "Button",
                    "id": "41e47695-637a-4d20-ba72-218743451ff3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "281278e3-6b6a-46c2-a3d4-d8eba60cc708",
                    "path": "<OculusTouchController>{LeftHand}/thumbstick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Thumbstick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c51334d2-97d9-4dbd-aa7f-221b7bd45673",
                    "path": "<XRInputV1::Oculus::OculusTouchControllerLeft>{LeftHand}/thumbstickclicked",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ThumbstickPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}